--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -2,5 +2,6 @@ name: CombatEventsLoot
 main: net.milkbowl.combatevents.loot.CombatEventsLoot
 version: 1.0
 author: Sleaker
+depend: [Vault, CombatEventsCore]
 description: >
              A plugin that allows the changing of loot drops.
