--- a/build.xml
+++ b/build.xml
@@ -3,6 +3,10 @@
 
     <property environment="env"/>
 
+    <path id="classpath">
+        <fileset dir="lib" includes="**/*.jar"/>
+    </path>
+
     <target name="jar" depends="main" />
 	
     <target name="main" depends="clean, compile, compress" description="Main target">
