--- a/build.xml
+++ b/build.xml
@@ -4,6 +4,7 @@
     <property environment="env"/>
 
     <path id="classpath">
+        <fileset dir="lib" includes="**/*.jar"/>
     </path>
 
     <target name="jar" depends="main" />
@@ -19,6 +20,11 @@
 	</delete>
 	<delete file="CombatEventsLoot.jar" />
 	<mkdir dir="bin"/>
+    	<echo>Retreiving Libraries</echo>
+            <mkdir dir="lib" />
+            <echo>- Bukkit</echo>
+            <get src="http://ci.milkbowl.net/job/Bukkit/lastSuccessfulBuild/artifact/target/bukkit-0.0.1-SNAPSHOT.jar"
+            	dest="lib/bukkit.jar" verbose="false" usetimestamp="true" />
     </target>
   
     <target name="compile" description="Compilation target">
