--- a/build.xml
+++ b/build.xml
@@ -25,6 +25,9 @@
             <echo>- Bukkit</echo>
             <get src="http://ci.milkbowl.net/job/Bukkit/lastSuccessfulBuild/artifact/target/bukkit-0.0.1-SNAPSHOT.jar"
             	dest="lib/bukkit.jar" verbose="false" usetimestamp="true" />
+    	<echo>- CombatEventsCore</echo>
+    	<get src="http://ci.milkbowl.net/job/CombatEventsCore/lastSuccessfulBuild/artifact/CombatEventsCore.jar"
+    		dest="lib/CombatEventsCore.jar" verbose="false" usetimestamp="true"/>
     </target>
   
     <target name="compile" description="Compilation target">
